--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "compile:sass": "sass sass/main.scss css/style.css -w"
+    "complie:sass": "sass sass/main.scss css/style.css -w"
   },
   "dependencies": {
     "sass": "^1.89.0"
